@@ -124,11 +124,7 @@ void show_helps(void)
 	cprintf("{base}(**)     : `-a` option also need `-q` is set\n");
 	cprintf("{base}(***)    : cap can both be value or name (e.j. cap_chown == 0)\n");
 	cprintf("{base}(****)   : Will not work if [COMMAND [ARGS]...] is like `/bin/su -`\n");
-	cprintf("{base}(*****)  : You can use `-m [source] /` to mount a block device as root\n");
-	cprintf("{base}           ruri will mount the mountpoints by the order.\n");
-	cprintf("{base}           so that mount options before / will not work\n");
-	cprintf("{base}           Note that if you use -M to mount /, -m option will not work\n");
-	cprintf("{base}           That's because ro-mountpoint will be mount after rw-mountpoint\n");
+	cprintf("{base}(*****)  : You can use `-m/-M [source] /` to mount other source as root\n");
 	cprintf("{base}(******) : Each `-l` option can only set one of the cpuset/memory limits\n");
 	cprintf("{base}           for example: `ruri -l memory=1M -l cpuset=1 /test`\n");
 	cprintf("{base}(*******): This option is totally useless\n");
