@@ -3,6 +3,7 @@
   * Add `-W` option: `--work-dir`.
   * Change MAX_MOUNTPOINTS AND MAX_ENVS from 128*2 to 512*2.
   * Auto kill all processes in container when umounting container.
+  * We will always mount / as the first mountpoint.
   * Fix crash on capget().
   * Fix qemu path when we pre-mount the rootfs from other source.
   * Add autotest.
